<resources>
    <string name="app_name">Park Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email_error_message">Email address must be valid</string>
    <string name="password_error_message">Password must be at least 8 characters and contain a number</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="account_doesnt_exist_error_message">Account with this email does not exist</string>
    <string name="invalid_credentials">Incorrect password</string>
    <string name="account_already_exists">An account with this email already exists</string>
    <string name="title_activity_home">Park Me</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_app_details">AppDetailsActivity</string>
    <string name="title_activity_timetable">TimetableActivity</string>
</resources>
